Add querying via Google Places API

--- a/src/me/amccarthy/finance/messages/messages.properties
+++ b/src/me/amccarthy/finance/messages/messages.properties
@@ -1,5 +1,6 @@
 finance.errors.failedToParseTransaction=Failed to parse record: %s
 finance.errors.ignoringRecord=Ignoring Record
+finance.errors.cannotReadApiKey=Cannot read API key; continuing without Google Places API.
 
 finance.groups.transportation=Transportation
 finance.groups.fees=Fees
