--- a/src/me/amccarthy/finance/messages/messages.properties
+++ b/src/me/amccarthy/finance/messages/messages.properties
@@ -1,16 +1,18 @@
 finance.errors.failedToParseTransaction=Failed to parse record: %s
 finance.errors.ignoringRecord=Ignoring Record
 finance.errors.cannotReadApiKey=Cannot read API key; continuing without Google Places API.
+finance.errors.noInternet=For best results, run this application with an internet connection. The application will run in offline mode but will not categorize most purchases properly.
 
 finance.groups.transportation=Transportation
 finance.groups.fees=Fees
-finance.groups.atm=ATM
+finance.groups.atm=ATMs
 finance.groups.rent=Rent
 finance.groups.gas=Gasoline
-finance.groups.restaurant=Restaurant
+finance.groups.restaurant=Restaurants
 finance.groups.unknown=Other
 
 finance.tip.prefix=You spent %s on %s. %s
 finance.tips.fees=Try to avoid fees whenever possible. If you have a lot of late fees, try setting up automatic reminders to notify you of due dates.
 finance.tips.transportation=Instead of taking personal transportation services, try to organize carpools, take public transportation, or take fewer trips. Avoid traveling at rush hours to avoid surge pricing.
 finance.tips.gas=To save on gas, try carpooling and searching online for the lowest price near you.
+finance.tips.restaurants=Going out to eat can be nice, but eating at home can be much cheaper. Try cooking instead of dining out every so often to save a little money.
