Add some global and group-specific rules

--- a/src/me/amccarthy/finance/messages/messages.properties
+++ b/src/me/amccarthy/finance/messages/messages.properties
@@ -1,18 +1,56 @@
+finance.parsingMsg=Analyzing Data (This could take up to a couple minutes)...
+finance.costBreakdown=Cost Breakdown (by category):
 finance.errors.failedToParseTransaction=Failed to parse record: %s
-finance.errors.ignoringRecord=Ignoring Record
 finance.errors.cannotReadApiKey=Cannot read API key; continuing without Google Places API.
 finance.errors.noInternet=For best results, run this application with an internet connection. The application will run in offline mode but will not categorize most purchases properly.
 
-finance.groups.transportation=Transportation
-finance.groups.fees=Fees
+finance.groups.finance=Financial Services
+finance.groups.airport=Airports
+finance.groups.tourism=Tourism
 finance.groups.atm=ATMs
-finance.groups.rent=Rent
-finance.groups.gas=Gasoline
+finance.groups.food=Food
+finance.groups.bank=Bank
+finance.groups.bar=Bars
+finance.groups.beauty=Beauty
+finance.groups.hobby=Hobbies and Recreation
+finance.groups.publicTransit=Public Transportation
 finance.groups.restaurant=Restaurants
-finance.groups.unknown=Other
+finance.groups.automotive=Automobiles and Maintenance
+finance.groups.gambling=Gambling
+finance.groups.store=Stores
+finance.groups.health=Health / Fitness
+finance.groups.departmentStore=Department Stores
+finance.groups.utilities=Utilities
+finance.groups.fees=Fees
+finance.groups.gas=Gasoline
+finance.groups.grocery=Grocery Stores
+finance.groups.home=Home Improvement
+finance.groups.insurance=Insurance Agencies
+finance.groups.laundry=Laundry Services
+finance.groups.legal=Legal Services
+finance.groups.library=Libraries
+finance.groups.locksmith=Locksmiths
+finance.groups.lodging=Lodging
+finance.groups.entertainment=Entertainment
+finance.groups.parking=Parking
+finance.groups.pets=Pets
+finance.groups.post=Postal Services
+finance.groups.rent=Rent
+finance.groups.school=Education
+finance.groups.storage=Storage Facilities
+finance.groups.transportation=Personal Transportation
+finance.groups.online=Online Retailers
+finance.groups.subscription=Premium Subscription Services
+finance.groups.unknown=Others / Unknown
 
 finance.tip.prefix=You spent %s on %s. %s
 finance.tips.fees=Try to avoid fees whenever possible. If you have a lot of late fees, try setting up automatic reminders to notify you of due dates.
 finance.tips.transportation=Instead of taking personal transportation services, try to organize carpools, take public transportation, or take fewer trips. Avoid traveling at rush hours to avoid surge pricing.
 finance.tips.gas=To save on gas, try carpooling and searching online for the lowest price near you.
 finance.tips.restaurants=Going out to eat can be nice, but eating at home can be much cheaper. Try cooking instead of dining out every so often to save a little money.
+finance.tips.retailMeNot=If you haven't already, check out RetailMeNot. It's a service that provides coupon codes for many businesses, and could save you some money.
+finance.tips.locksmith=It may help to put a note next to anything you're worried about locking yourself out of.
+finance.tips.finance=There are no charges for any financial services within the past year. It's a good idea to meet with your financial adviser regularly. Doing so will most likely help your overall financial stability.
+finance.tips.subscription=Cutting subscription services can save small amounts of money in the short term. Make notes of what services you use the least and try to cut them from your budget.
+finance.tips.walmart=Try using the Wal-Mart savings catcher smartphone app. You can use it to earn store credit on your purchases.
+finance.tips.departmentStores=Department stores often have free rewards programs. Try enrolling in some of these to save money on your purchases.
