add rule against gambling

--- a/src/me/amccarthy/finance/messages/messages.properties
+++ b/src/me/amccarthy/finance/messages/messages.properties
@@ -54,3 +54,4 @@ finance.tips.finance=There are no charges for any financial services within the 
 finance.tips.subscription=Cutting subscription services can save small amounts of money in the short term. Make notes of what services you use the least and try to cut them from your budget.
 finance.tips.walmart=Try using the Wal-Mart savings catcher smartphone app. You can use it to earn store credit on your purchases.
 finance.tips.departmentStores=Department stores often have free rewards programs. Try enrolling in some of these to save money on your purchases.
+finance.tips.gambling=Try to avoid gambling; the odds are stacked against you! Avoid casinos to save a lot of money!
